[gd_scene load_steps=10 format=2]

[ext_resource path="res://imagens/phantom-wallpaper_1050484.jpg" type="Texture" id=1]
[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://imagens/1 - Avião.png" type="Texture" id=3]
[ext_resource path="res://imagens/1 - aviao 2.png" type="Texture" id=4]
[ext_resource path="res://script_selecao.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "personagem1"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Personagem1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0.187916, 0.187916 ), Vector2( 0.21286, 0.21286 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Personagem1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Personagem2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.392157 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "personagem2"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Personagem2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0.111111, 0.111111 ), Vector2( 0.124444, 0.133333 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Personagem2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Personagem1:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.392157 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="imagem_inicio" type="Sprite" parent="."]
position = Vector2( 516.12, 311.169 )
scale = Vector2( 0.649322, 0.649322 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.180392 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Menu" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = 32.0
margin_right = 562.0
margin_bottom = 128.0
custom_fonts/normal_font = SubResource( 1 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Personagem" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = 144.0
margin_right = 384.0
margin_bottom = 240.0
custom_fonts/normal_font = SubResource( 1 )
text = "
Personagem"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Musica" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = 208.0
margin_right = 562.0
margin_bottom = 304.0
custom_fonts/normal_font = SubResource( 1 )
text = "
Música"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Som" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = 304.0
margin_right = 562.0
margin_bottom = 400.0
custom_fonts/normal_font = SubResource( 1 )
text = "Som
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difculdade" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = 368.0
margin_right = 562.0
margin_bottom = 464.0
custom_fonts/normal_font = SubResource( 1 )
text = "Dificuldade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 352.0
margin_top = 480.0
margin_right = 676.0
margin_bottom = 568.0
custom_fonts/font = SubResource( 2 )
text = "Iniciar Jogo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_Musica" type="CheckBox" parent="."]
margin_left = 304.0
margin_top = 232.0
margin_right = 328.0
margin_bottom = 256.0
rect_scale = Vector2( 2, 2 )
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_Som" type="CheckBox" parent="."]
margin_left = 304.0
margin_top = 296.0
margin_right = 328.0
margin_bottom = 320.0
rect_scale = Vector2( 2, 2 )
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 456.0
margin_top = 144.0
margin_right = 568.0
margin_bottom = 240.0
color = Color( 0.490196, 0.490196, 0.490196, 0.784314 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 584.0
margin_top = 144.0
margin_right = 696.0
margin_bottom = 240.0
color = Color( 0.490196, 0.490196, 0.490196, 0.784314 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Personagem1" type="Sprite" parent="."]
position = Vector2( 512, 192 )
scale = Vector2( 0.187916, 0.187916 )
texture = ExtResource( 3 )

[node name="Personagem2" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.392157 )
position = Vector2( 640, 192 )
scale = Vector2( 0.124444, 0.133333 )
texture = ExtResource( 4 )

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 448.0
margin_top = 352.0
margin_right = 696.0
margin_bottom = 415.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/personagem1 = SubResource( 3 )
anims/personagem2 = SubResource( 4 )
[connection signal="pressed" from="Button" to="." method="iniciar_jogo"]
